src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CM_RX_Effect_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_RX_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_RX_Rsn_For_Leaving__c</fullName>
        <label>Reason For Leaving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asian of Non Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Asian of Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Asian of Unknown Origin</fullName>
                </value>
                <value>
                    <fullName>Black or African American of Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Black or African American of Non Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Black or African American of Unknown Origin</fullName>
                </value>
                <value>
                    <fullName>Indian or Alaska Native of Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Indian or Alaska Native of Non Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Indian or Alaska Native of Unknown Origin</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Other Pacific Islander of Hispanic</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Other Pacific Islander NonHispanic</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Other Pacific Islander of Unknown</fullName>
                </value>
                <value>
                    <fullName>Other of Non Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Other of Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Other of Unknown Origin</fullName>
                </value>
                <value>
                    <fullName>Unknown of Non Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Unknown of Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Unknown of Unknown Origin</fullName>
                </value>
                <value>
                    <fullName>White of Non Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>White of Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>White of Unknown Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <label>Hours of Operation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abkhazian</fullName>
                </value>
                <value>
                    <fullName>Afar</fullName>
                </value>
                <value>
                    <fullName>Afghan (Persian)</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>American Sign</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Apache languages</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Aramaic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Asian Indian</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Assyrian</fullName>
                </value>
                <value>
                    <fullName>Baltic</fullName>
                </value>
                <value>
                    <fullName>Banda</fullName>
                </value>
                <value>
                    <fullName>Bantu</fullName>
                </value>
                <value>
                    <fullName>Basa</fullName>
                </value>
                <value>
                    <fullName>Baskir</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Bemba</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Brenton</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Byelorussian</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>